--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -34,7 +34,7 @@
   }
 
   .pic1 {
-    background-image: url("../resources/imgs/slider1Compresed600.jpg");
+    background-image: url("../resources/imgs/slider1.webp");
     width: 100%;
     min-height: 100vh;
     margin: 0;
