--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -57,20 +57,20 @@
   }
   .tabs {
     background-color: rgb(59, 63, 62);
+    display: flex;
+    justify-content: space-around;
   }
   .tabImg {
     width: 200px;
     height: 200px;
-
     display: inline;
     vertical-align: -webkit-baseline-middle;
-    float: left;
+    border: 8px solid rgba(0, 0, 0, 0.3);
   }
   .tabText {
     margin-top: 30px;
-    float: right;
     width: 40%;
-    font-size: 20px;
+    font-size: 4vw;
   }
   .tabsContainer {
     background-color: rgb(44, 43, 43);
